li items created, goBack added, clear highScores working, some styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,3 +5,29 @@
   display: flex;
   justify-content: space-between;
 }
+
+.answerButton {
+  background-color: blue;
+  color: white;
+}
+
+.blueLetters {
+  background-color: white;
+  color: blue;
+  border: white;
+  font-size: larger;
+}
+
+.startContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.centerLeft{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: left;
+}
+}
